--- a/output/archives.html
+++ b/output/archives.html
@@ -20,8 +20,12 @@
 <h1>Archives for Blog - Sintegra Consulting</h1>
 
 <dl>
-    <dt>Sun 26 November 2017</dt>
-    <dd><a href="/My-first-post.html">My first post</a></dd>
+    <dt>Mon 26 February 2018</dt>
+    <dd><a href="/are-you-just-inside-your-skin-or-is-your-smartphone-part-of-you.html">Are ‘you’ just inside your skin or is your smartphone part of you?</a></dd>
+    <dt>Wed 14 February 2018</dt>
+    <dd><a href="/the-tech-bias-why-silicon-valley-needs-social-theory.html">The tech bias: why Silicon Valley needs social theory</a></dd>
+    <dt>Wed 19 April 2017</dt>
+    <dd><a href="/quantum-cryptography-is-unbreakable-so-is-human-ingenuity.html">The tech bias: Quantum cryptography is unbreakable. So is human ingenuity</a></dd>
 </dl>
     </section>
 
