--- a/output/authors.html
+++ b/output/authors.html
@@ -19,7 +19,7 @@
     <section class="main-content">
     <h1>Authors on Blog - Sintegra Consulting</h1>
     <ul>
-        <li><a href="/author/your-name.html">Your name</a> (1)</li>
+        <li><a href="/author/sintegra.html">sintegra</a> (3)</li>
     </ul>
     </section>
 
