--- a/output/categories.html
+++ b/output/categories.html
@@ -19,7 +19,9 @@
     <section class="main-content">
     <h1>Categories on Blog - Sintegra Consulting</h1>
     <ul>
-        <li><a href="/category/misc.html">misc</a> (1)</li>
+        <li><a href="/category/psychology.html">Psychology</a> (1)</li>
+        <li><a href="/category/social.html">Social</a> (1)</li>
+        <li><a href="/category/technology.html">Technology</a> (1)</li>
     </ul>
     </section>
 
