--- a/output/archives.html
+++ b/output/archives.html
@@ -8,24 +8,24 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,700">
-    <link rel="stylesheet" type="text/css" href="/theme/css/main.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/main.css">
 </head>
 <body itemscope itemtype="http://schema.org/Blog">
 <header class="site-header">
-    <a href="">
+    <a href="http://localhost:8000">
     </a>
-    <h1 itemprop="name"><a href=""></a></h1>
+    <h1 itemprop="name"><a href="http://localhost:8000"></a></h1>
 </header>
     <section class="main-content">
 <h1>Archives for Blog - Sintegra Consulting</h1>
 
 <dl>
     <dt>Mon 26 February 2018</dt>
-    <dd><a href="/are-you-just-inside-your-skin-or-is-your-smartphone-part-of-you.html">Are ‘you’ just inside your skin or is your smartphone part of you?</a></dd>
+    <dd><a href="http://localhost:8000/are-you-just-inside-your-skin-or-is-your-smartphone-part-of-you.html">Are ‘you’ just inside your skin or is your smartphone part of you?</a></dd>
     <dt>Wed 14 February 2018</dt>
-    <dd><a href="/the-tech-bias-why-silicon-valley-needs-social-theory.html">The tech bias: why Silicon Valley needs social theory</a></dd>
+    <dd><a href="http://localhost:8000/the-tech-bias-why-silicon-valley-needs-social-theory.html">The tech bias: why Silicon Valley needs social theory</a></dd>
     <dt>Wed 19 April 2017</dt>
-    <dd><a href="/quantum-cryptography-is-unbreakable-so-is-human-ingenuity.html">The tech bias: Quantum cryptography is unbreakable. So is human ingenuity</a></dd>
+    <dd><a href="http://localhost:8000/quantum-cryptography-is-unbreakable-so-is-human-ingenuity.html">The tech bias: Quantum cryptography is unbreakable. So is human ingenuity</a></dd>
 </dl>
     </section>
 
