--- a/output/categories.html
+++ b/output/categories.html
@@ -8,20 +8,20 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=9" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700|Source+Serif+Pro:400,700">
-    <link rel="stylesheet" type="text/css" href="/theme/css/main.css">
+    <link rel="stylesheet" type="text/css" href="http://localhost:8000/theme/css/main.css">
 </head>
 <body itemscope itemtype="http://schema.org/Blog">
 <header class="site-header">
-    <a href="">
+    <a href="http://localhost:8000">
     </a>
-    <h1 itemprop="name"><a href=""></a></h1>
+    <h1 itemprop="name"><a href="http://localhost:8000"></a></h1>
 </header>
     <section class="main-content">
     <h1>Categories on Blog - Sintegra Consulting</h1>
     <ul>
-        <li><a href="/category/psychology.html">Psychology</a> (1)</li>
-        <li><a href="/category/social.html">Social</a> (1)</li>
-        <li><a href="/category/technology.html">Technology</a> (1)</li>
+        <li><a href="http://localhost:8000/category/psychology.html">Psychology</a> (1)</li>
+        <li><a href="http://localhost:8000/category/social.html">Social</a> (1)</li>
+        <li><a href="http://localhost:8000/category/technology.html">Technology</a> (1)</li>
     </ul>
     </section>
 
